--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -15,5 +15,4 @@
     .slides
       = yield
     %script(src="javascripts/slideshow.js")
-    %script(src="javascripts/hagenburger.js")
-      
+    %script(src="javascripts/moeffju.js")
