--- a/src/stylesheets/global/_typography.scss
+++ b/src/stylesheets/global/_typography.scss
@@ -1,6 +1,6 @@
 h1 {
   color: $blue;
-  font-size: 75px;
+  font-size: 72px;
   line-height: 1.1em;
   margin: 40px;
   text-align: center;
@@ -25,7 +25,7 @@ strong {
 }
 
 body {
-    font-family: ff-dagny-web-pro-1, ff-dagny-web-pro-2, "Dagny Offc", 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+    font-family: "LubalinGraph LT", sans-serif !important;
 }
 
 .cross {
